feat: update swagger.json
